--- a/pages/history.html
+++ b/pages/history.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <link rel="stylesheet" href="./nav-foot.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <style>
     body{
@@ -360,6 +361,84 @@
 
         </div>
     </div>
+
+    <footer class="footer">
+
+        <div class="footer-container">
+            <div class="footer-container-1">
+                Quick Links
+                <table border="0" class="table">
+                    <tr>
+                        <td> Divine Tales </td>
+                        <td> Legends of the Land </td>
+                        <td> Ancient Minds </td>
+                    </tr>
+                    <tr>
+                        <td> Spiritual Souls </td>
+                        <td> Unsung Freedom Fignters </td>
+                        <td> New Legacy </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="footer-container-2">
+                News & Updates
+                <p id="news"> Get updates on the latest posts and more from History Rise straight to your inbox.
+                </p>
+                <form>
+                    <button type="submit" class="subscribe-button"> Subscribe Now </button>
+                </form>
+            </div>
+
+            <div class="footer-container-3">
+                Follow Us
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/profile.php?id=61578076284703" target="_blank"> <img src="./images/facebook.png" alt="Facebook"
+                            class="social-icon">
+                    </a>
+                    <a href="https://www.instagram.com/prasad_.patil_96k/#" target="_blank"> <img src="./images/instagram.png" alt="Instagram"
+                            class="social-icon">
+                    </a>
+                    <a href="https://x.com/prasad_shirfule/" target="_blank"> <img src="./images/twitter.png" alt="Twitter"
+                            class="social-icon"> </a>
+                    <a href="https://www.youtube.com/" target="_blank"> <img src="./images/youtube.png" alt="YouTube"
+                            class="social-icon"> </a>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <hr>
+
+        <div class="footer-content">
+            <div>
+                <img src="./images/logo-1-nobg.png" alt="Bhartiya Virasat logo" class="logo" width="80%" height="80%">
+            </div>
+
+            <div class="footer-content-main">
+                <div class="footer-content-1">
+                    <div class="foot-content">
+                        <a href="./pdf/terms-condition.pdf" target="_blank" id="text"> Terms and conditions </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pdf/privacy-policy.pdf" target="_blank" id="text"> Privacy Policy </a>
+                    </div>
+
+                    <div class="foot-content">
+                        <a href="./pages/Contact.html" target="_blank" id="text"> Contact us </a>
+                    </div>
+                </div>
+
+                <div class="last-footer">
+                    © 2025 Bhartiya Virasat. All rights reserved.
+                </div>
+
+            </div>
+
+        </div>
+    </footer>
+    <!-- Foot
     
 </body>
 </html>
