--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="nav-links">
             <a href="./pages/methology.html" class="page"> Mythology </a>
-            <a href="./pages/ticketbooking.html" class="page"> History </a>
+            <a href="./pages/history.html" class="page"> History </a>
             <a href="" class="page"> The Fighters </a>
             <a href="" class="page"> Inspiring Indians </a>
         </div>
@@ -66,7 +66,7 @@
                     <h2> Divine Tales </h2>
                 </div>
                 <div>
-                    <img src="./images/historical-leaders.png" alt="historical leaders" class="card-0" height="230px" width="320px">
+                    <a href="./pages/history.html"> <img src="./images/historical-leaders.png" alt="historical leaders" class="card-0" height="230px" width="320px"> </a>
                     <h2> Legends of the Land </h2>
                 </div>
                 <div>
@@ -101,12 +101,12 @@
                 Quick Links
                 <table border="0" class="table">
                     <tr>
-                        <td> Divine Tales </td>
-                        <td> Legends of the Land </td>
-                        <td> Ancient Minds </td>
+                        <td><a href="./pages/methology.html" class="quick">  Divine Tales </a> </td>
+                        <td><a href="./pages/history.html" class="quick">  Legends of the Land </a> </td>
+                        <td> <a href="./pages/ancientminds.html" class="quick"> Ancient Minds </a> </td>
                     </tr>
                     <tr>
-                        <td> Spiritual Souls </td>
+                        <td> <a href="./pages/spiritualsouls.html" class="quick">  Spiritual Souls </a> </td>
                         <td> Unsung Freedom Fignters </td>
                         <td> New Legacy </td>
                     </tr>
