--- a/pages/spiritualsouls.html
+++ b/pages/spiritualsouls.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Spiritual Souls</title>
     <link rel="stylesheet" href="nav-foot.css">
     <link rel="stylesheet" href="spiritualsouls.css">
 </head>
